# domoticz

./: .gitignore  CMakeLists.txt  build.sh
dzVents/runtime/: Domoticz.lua
dzVents/runtime/device-adapters/: generic_device.lua  kodi_device.lua  logitech_media_server_device.lua  security_device.lua  smoke_detector_device.lua  switch_device.lua
hardware/: BleBox.cpp  ColorSwitch.h  CurrentCostMeterSerial.cpp  DomoticzHardware.cpp  DomoticzHardware.h  Dummy.cpp  EvohomeBase.cpp  EvohomeRadio.cpp  HEOS.cpp  Kodi.cpp  Limitless.cpp  LogitechMediaServer.cpp  MySensorsBase.cpp  OTGWBase.cpp  OnkyoAVTCP.cpp  OpenZWave.cpp  PanasonicTV.cpp  PiFace.cpp  Pinger.cpp  RFLinkBase.cpp  RFXComSerial.cpp  Rego6XXSerial.cpp  S0MeterBase.cpp  SBFSpot.cpp  Tellstick.cpp  WOL.cpp  XiaomiGateway.cpp  XiaomiGateway.h  hardwaretypes.h
hardware/PhilipsHue/: PhilipsHue.cpp
hardware/Xiaomi/: DevAttr.cpp  DevAttr.hpp  Device.cpp  Device.hpp  Outlet.cpp  Outlet.hpp  OutletChild.cpp  OutletChild.hpp  Override.cpp  SupportDevice.hpp  XiaoMiType.hpp
main/: EventSystem.cpp  RFXNames.cpp  RFXNames.h  RFXtrx.h  SQLHelper.cpp  SQLHelper.h  Scheduler.cpp  SignalHandler.cpp  WebServer.cpp  WebServer.h  WebServerHelper.cpp  domoticz.cpp  mainworker.cpp  mainworker.h
notifications/: NotificationHelper.cpp
push/: FibaroPush.cpp  GooglePubSubPush.cpp  HttpPush.cpp  InfluxPush.cpp
sqlite/: CMakeLists.txt
webserver/: cWebem.cpp  request_parser.cpp
www/reacticz/: asset-manifest.json  index.html  precache-manifest.3e7d5e5c3ccfc5e303db9aabd7dbc63b.js  service-worker.js
(+10 files in other folders)
